[package]
name = "ul-sys"
version = "1.4.0-alpha.0"
authors = ["Kenan Sulayman <kenan@sly.mn>", "Amjad Alsharafi"]
description = "Bindings to Ultralight Framework (Ultralight, AppCore)"
license = "MIT"
readme = "readme.md"
repository = "https://github.com/VideowindoW/rust-ul-sys"
edition = "2021"

[features]
# link only Ultralight unique libraries, and not other dependancies that
# may be available in the host system (such as libglib and libgio)
only-ul-deps = []

[build-dependencies]
cmake = "0.1"

[dependencies]
